projects/web/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc-postgres
  template:
    metadata:
      labels:
        app: hedgedoc-postgres
    spec:
      nodeSelector:
        kubernetes.io/arch: "arm64"
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: hedgedoc-pvc
