projects/web/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-postgres
  namespace: default
spec:
  selector:
    app: hedgedoc-postgres
  ports:
    - port: 5432
      targetPort: 5432
