projects/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-service
  namespace: default
spec:
  selector:
    app: hedgedoc
  ports:
    - port: 80
      targetPort: 3000
